Fixed loading flicker - Front page nearly complete

--- a/components/reusables/ProgressiveImageLoader/styles.module.scss
+++ b/components/reusables/ProgressiveImageLoader/styles.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   margin: 0;
   overflow: hidden;
+  min-height: 0 !important;
 }
 
 .loaded {
@@ -22,7 +23,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  min-height: 100% !important;
   width: 100%;
   height: 100%;
 }
